--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev:sandbox": "wrangler pages dev dist --ip 0.0.0.0 --port 3000",
     "dev:d1": "wrangler pages dev dist --d1=thaiwiki-production --local --ip 0.0.0.0 --port 3000",
     "build": "vite build",
+    "vercel-build": "vite build",
     "preview": "wrangler pages dev dist",
     "deploy": "npm run build && wrangler pages deploy dist",
     "deploy:prod": "npm run build && wrangler pages deploy dist --project-name thai-wiki-photo-test",
