Vercel 런타임 오류 수정
- api/index.js: Hono Vercel 어댑터 사용
- vercel.json: 올바른 Node.js 런타임 버전 지정
- 초보자도 쉬운 배포를 위한 Vercel 최적화 완료

--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,13 @@
 {
   "functions": {
-    "src/index.tsx": {
-      "runtime": "@vercel/node"
+    "api/index.js": {
+      "runtime": "@vercel/node@3.0.7"
     }
   },
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "/src/index.tsx"
+      "destination": "/api"
     }
-  ],
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist"
+  ]
 }
