--- a/netlify.toml
+++ b/netlify.toml
@@ -1,16 +1,19 @@
 [build]
-  publish = "."
-  command = "echo 'No build needed for static site'"
+  publish = "dist"
+  command = "npm run build"
 
 [build.environment]
   NODE_VERSION = "18"
 
+[functions]
+  directory = "dist"
+
 [[redirects]]
   from = "/api/*"
-  to = "/.netlify/functions/:splat"
+  to = "/.netlify/functions/_worker"
   status = 200
 
 [[redirects]]
   from = "/*"
-  to = "/index.html"
+  to = "/.netlify/functions/_worker"
   status = 200
