🚀 최종 배포: 라디오 버튼 3등급 시스템 완성
✅ 구현된 기능:
- 📝일반/⭐추천/👑VIP 3등급 라디오 버튼 시스템
- 상호 배타적 등급 선택 (기본값: 일반)
- VIP → 추천 → 일반 순서 정렬
- null 참조 오류 완전 해결
- 성별 옵션: 여성/레이디보이/트랜스젠더

🗄️ 데이터베이스:
- D1 SQLite 마이그레이션 완료
- is_vip 컬럼 추가 및 인덱스 최적화
- 더미 데이터 제거 (깨끗한 상태)

🎯 배포 준비 완료

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -9,8 +9,8 @@
   "d1_databases": [
     {
       "binding": "DB",
-      "database_name": "thai-wiki-production",
-      "database_id": "1812dba0-f7b0-4f37-954f-79e916930682"
+      "database_name": "webapp-production",
+      "database_id": "ad260611-9ad0-48a3-9615-2d97db9fa6f8"
     }
   ]
 }
